--- a/commentpage/src/App.css
+++ b/commentpage/src/App.css
@@ -1,4 +1,4 @@
-/* .App {
+.App {
   text-align: center;
 }
 
@@ -35,11 +35,4 @@
   to {
     transform: rotate(360deg);
   }
-} */
-
-/* html, body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-} */
+}
